# rag

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose-bootstrap.yml  docker-compose-dev.yml  docker-compose-prod.yml  docker-compose.yml  env.template  logger.py  pyproject.toml  settings.py
app/: __init__.py  config.py  main.py  rag_service.py  retriever.py  schemas.py
backup_downloader/: Dockerfile  README.md  bootstrap_and_restore.sh  download.py  pyproject.toml
docs/: qdrant-migration.md  version-compatibility.md
llm_service/: README.md  llm_client.py  utils.py
notebook/: rag_etl_loader.ipynb  rag_metrics_evaluation.ipynb  ragas_evaluation.ipynb
tests/: README.md  dataset.json  dataset_10.json  dataset_limited.json  evaluate_rag.py  evaluation_results.json
