[project]
name = "rag-llm-cource"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "fastembed>=0.7.4",
    "ipykernel>=7.1.0",
    "langchain==0.3.14",
    "langchain-community==0.3.14",
    "langchain-core==0.3.29",
    "langchain-openai==0.2.14",
    "langchain-mistralai==0.2.4",
    "langchain-qdrant==0.2.0",
    "langchain-text-splitters==0.3.5",
    "markdown>=3.10",
    "matplotlib>=3.10.7",
    "numpy>=2.3.5",
    "python-dotenv>=1.2.1",
    "qdrant-client>=1.12.0,<1.13.0",
    "redis>=7.1.0",
    "tiktoken>=0.12.0",
    "tqdm>=4.67.1",
    "unstructured>=0.18.21",
    "pandas>=2.3.3",
    "seaborn>=0.13.2",
    "rouge-score>=0.1.2",
    "nltk>=3.9.2",
    "ragas>=0.1.0",
    "datasets>=2.14.0",
]
